# novic

./: LICENSE  README.md  pyproject.toml
src/novic/: __init__.py  __main__.py  app.py  main.py
src/novic/core/: menu_framework.py  title_bar.py
src/novic/syntax/: __init__.py  registry.py
src/novic/syntax_defs/: java.json  python.json
src/novic/ui/: MainWindow.py  code_editor.py  file_icon_config.py  file_icons.py  footer.py  frameless.py  sidebar.py  tabbed_editor.py
